# Max_Cut-Ackermann-Nim

./: .gitignore  .python-version  README.md  pyproject.toml  requirements.txt
src/: Max_Cut_Greedy.py  Max_Cut_local_search.py  Nim_Game.py  basic_class.py
tests/: tests_ackermann.py  tests_max_cut_greedy.py  tests_max_cut_local_search.py  tests_nim_game.py
