[project]
name = "problem_set_2"
version = "1.0.0"
description = "Max-Cut / Ackermann function / Nim game"
authors = [{ name = "Louis641214" }]
dependencies = [
    "matplotlib>=3.10"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]
